--- a/.gitignore
+++ b/.gitignore
@@ -68,9 +68,7 @@ local.properties
 # Maven
 ######################
 /log/
-/target
-../target/
-*/target/**
+/target/
 
 ######################
 # Gradle
